--- a/MobilePride.Web/Scripts/spa/mobilePride/login/login.html
+++ b/MobilePride.Web/Scripts/spa/mobilePride/login/login.html
@@ -3,10 +3,10 @@
     <form>
         <header>Login</header>
         <label>Username <span>*</span></label>
-        <input />
+        <input id="username" type="text"/>
         <div class="help">At least 6 character</div>
         <label>Password <span>*</span></label>
-        <input />
+        <input id="password" type="password"/>
         <div class="help">Use upper and lowercase lettes as well</div>
         <button>Login</button>
     </form>
